--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "nattakan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "sqlite3": "^5.1.7"
   }
